# Neural_Hamilton

./: .gitignore  Cargo.toml  README.md  RELEASES.md  analyze.py  cli.py  config.py  data_link_manager.sh  deeponet_grid.yaml  deeponet_run.yaml  deeponet_tpe.yaml  fair_compare.py  install_requirements.sh  install_requirements_julia.sh  justfile  main.py  mamba.py  mambonet_grid.yaml  model.py  pruner.py  requirements.txt  splus.py  traonet_run.yaml  traonet_tpe.yaml  util.py  varonet_grid.yaml  varonet_run.yaml  varonet_tpe.yaml
configs/: deeponet_1epoch.yaml  deeponet_1epoch_optimized.yaml  deeponet_1epoch_tpe.yaml  deeponet_run.yaml  deeponet_run_more.yaml  deeponet_run_optimized.yaml  deeponet_run_splus.yaml  deeponet_run_splus_opt.yaml  deeponet_tpe_full.yaml  deeponet_tpe_more.yaml  mambonet_1epoch.yaml  mambonet_1epoch_tpe.yaml  mambonet_grid.yaml  mambonet_run.yaml  mambonet_run_optimized.yaml  mambonet_tpe.yaml  mambonet_tpe_full.yaml  mambonet_tpe_more.yaml  mambonet_tpe_splus.yaml  traonet_grid.yaml  traonet_run.yaml  traonet_run_optimized.yaml  traonet_run_soap.yaml  traonet_tpe_full.yaml  traonet_tpe_splus.yaml  varonet_run.yaml  varonet_run_optimized.yaml
docs/: symplecticity_design.md
scripts/: filter_by_pacmap.py  filter_by_umap.py  is_conserved.py  loss_compare.py  loss_hist.py  loss_hist_much.py  loss_scale.py  parquet_resave.py  plot_pacmap.py  plot_relevant_with_pacmap.py  plot_relevant_with_umap.py  potential_and_trajectory_plot.py  potential_plot.py  symplecticity.py  true_trajectories.jl  umap_filter.py  util.py  validate_data.py  vast_train.sh  (+2 more)
(+140 files in other folders)
