[package]
name = "neural_hamilton"
version = "0.1.0"
edition = "2021"

[dependencies]
dialoguer = "0.11.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
ndarray = "0.16.1"
pacmap = { version = "0.2.6", features = ["openblas-system"] }
peroxide = { version = "0.39.6", features = ["parquet"] }
rayon = "1.10.0"
rugfield = "0.2.3"
